[package]
name = "medea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
digest = "0.10.7"
enum_dispatch = "0.3.12"
hmac  = "0.12.1"
libc = "0.2.147"
mac_address = "1.1.5"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.7"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "v1", "std"] }

[profile.release]
strip = true
