[package]
name = "haondt-medea"
version = "0.6.1"
authors = ["Noah Burghardt <burghardtnoah@gmail.com>"]
license = "MIT"
description = "A command-line developers toolbox"
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/haondt/medea"
repository = "https://github.com/haondt/medea"
keywords = ["cli", "json", "tools", "base"]
categories = ["command-line-utilities"]

[[bin]]
name = "medea"
path = "src/main.rs"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = "0.4.26"
chrono-tz = "0.8.3"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
digest = "0.10.7"
enum_dispatch = "0.3.12"
hmac  = "0.12.1"
indoc = "2.0.3"
libc = "0.2.147"
mac_address = "1.1.5"
md-5 = "0.10.5"
rand = "0.8.5"
regex = "1.9.3"
rstest = "0.18.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sha1 = "0.10.5"
sha2 = "0.10.7"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "v1", "std"] }

[profile.release]
strip = true
